--- a/src/lib/app.css
+++ b/src/lib/app.css
@@ -64,3 +64,14 @@ body {
       linear-gradient(to top right, #ededed 0%, #f0f1fc 50%) top right / 50% 50% no-repeat;
   }
 }
+
+.area-graph {
+  --vis-area-cursor: default;
+  --vis-area-fill-opacity: 1;
+  --vis-area-stroke-color: none;
+  --vis-area-stroke-width: 0px;
+  --vis-area-stroke-dasharray: none;
+  --vis-area-stroke-opacity: 1;
+  --vis-area-hover-fill-opacity: none;
+  --vis-area-hover-stroke-width: none;
+}
