--- a/src/lib/app.css
+++ b/src/lib/app.css
@@ -21,6 +21,9 @@
     --immich-ui-danger: 180 0 0;
     --immich-ui-warning: 255 170 0;
     --immich-ui-info: 14 165 233;
+    --immich-ui-gray: 246 246 246;
+
+    --immich-ui-default-border: 209 213 219;
   }
 
   .dark {
@@ -28,10 +31,13 @@
     --immich-ui-primary: 172 203 250;
     --immich-ui-light: 0 0 0;
     --immich-ui-dark: 229 231 235;
-    /* --immich-success: 56 142 60; */
+    /* --immich-ui-success: 56 142 60; */
     --immich-ui-danger: 239 68 68;
     --immich-ui-warning: 255 170 0;
     --immich-ui-info: 14 165 233;
+    --immich-ui-gray: 33 33 33;
+
+    --immich-ui-default-border: 55 65 81;
   }
 }
 
