--- a/src/lib/app.css
+++ b/src/lib/app.css
@@ -14,13 +14,14 @@
   :root {
     /* light */
     --immich-ui-primary: 66 80 175;
-    --immich-ui-dark: 0 0 0;
+    --immich-ui-dark: 58 58 58;
     --immich-ui-light: 255 255 255;
     --immich-ui-success: 34 197 94;
     --immich-ui-danger: 180 0 0;
     --immich-ui-warning: 255 170 0;
     --immich-ui-info: 14 165 233;
     --immich-ui-gray: 246 246 246;
+    --immich-ui-muted: 75 85 99;
 
     --immich-ui-default-border: 209 213 219;
   }
@@ -35,6 +36,7 @@
     --immich-ui-warning: 255 170 0;
     --immich-ui-info: 14 165 233;
     --immich-ui-gray: 33 33 33;
+    --immich-ui-muted: 156 163 175;
 
     --immich-ui-default-border: 55 65 81;
   }
