--- a/src/lib/app.css
+++ b/src/lib/app.css
@@ -1,6 +1,24 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import 'tailwindcss';
+@import '@immich/ui/theme/default.css';
+@source '../../node_modules/@immich/ui';
+@source '../../apps/';
+
+@custom-variant dark (&:where(.dark, .dark *):not(.light));
+
+@theme inline {
+  --color-immich-primary: rgb(var(--immich-primary));
+
+  --color-immich-dark-primary: rgb(var(--immich-dark-primary));
+}
+
+@theme {
+  --font-immich-title: Snowburst One, cursive;
+  --font-immich-mono: Overpass Mono, monospace;
+
+  --spacing-18: 4.5rem;
+
+  --breakpoint-tall: 800px;
+}
 
 @layer base {
   :root {
@@ -9,36 +27,6 @@
 
     /* dark */
     --immich-dark-primary: 172 203 250;
-  }
-
-  :root {
-    /* light */
-    --immich-ui-primary: 66 80 175;
-    --immich-ui-dark: 58 58 58;
-    --immich-ui-light: 255 255 255;
-    --immich-ui-success: 34 197 94;
-    --immich-ui-danger: 180 0 0;
-    --immich-ui-warning: 255 170 0;
-    --immich-ui-info: 14 165 233;
-    --immich-ui-gray: 246 246 246;
-    --immich-ui-muted: 75 85 99;
-
-    --immich-ui-default-border: 209 213 219;
-  }
-
-  .dark {
-    /* dark */
-    --immich-ui-primary: 172 203 250;
-    --immich-ui-light: 0 0 0;
-    --immich-ui-dark: 229 231 235;
-    /* --immich-ui-success: 56 142 60; */
-    --immich-ui-danger: 239 68 68;
-    --immich-ui-warning: 255 170 0;
-    --immich-ui-info: 14 165 233;
-    --immich-ui-gray: 33 33 33;
-    --immich-ui-muted: 156 163 175;
-
-    --immich-ui-default-border: 55 65 81;
   }
 }
 
@@ -72,5 +60,4 @@ html {
 
 body {
   margin: 0;
-  color: #3a3a3a;
 }
