--- a/common/theme/theme.css
+++ b/common/theme/theme.css
@@ -27,6 +27,10 @@
   @apply text-gray-600 dark:text-gray-400;
 }
 
+.border-muted{
+  @apply border-gray-600 dark:border-gray-400;
+}
+
 :root.dark {
   color-scheme: dark;
 }
